<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ContactList</string>
    <string name="name">Name</string>
    <string name="company">Company</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="birthday">Birthday</string>
    <string name="email">Email</string>
    <string name="action_settings">Settings</string>
    <string name="work">Work</string>
    <string name="title_activity_contact_detail">ContactDetail</string>

</resources>
